# hld_game

./: .gitignore  CMakeLists.txt  main.cpp
maps/: backup.json  editor1.json  init.json  teste1.json
media/: aranha.json  arvore.json  chapacete_sheet.json
src/: Action.cpp  Action.h  Action.hpp  ActionMap.cpp  ActionMap.h  ActionMap.tpp  ActionTarget.cpp  ActionTarget.h  ActionTarget.tpl  ActionTarget.tpp  Assets.cpp  Assets.h  Collision.cpp  Collision.h  Configuration.cpp  Configuration.h  Entity.cpp  Entity.h  EntityBehavior.cpp  EntityBehavior.h  Events.cpp  Events.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  Player.tpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.tpp  TileMap.cpp  TileMap.h
src/core/: Configuration.cpp  Configuration.h  Entity.cpp  Entity.h  Geo_square.cpp  Geo_square.h  Level.cpp  Level.h
src/helper/: Fps.h
src/map/: Geo_square.cpp  Layer.h  Layer.tpp  Tile.cpp  Tile.h  VLayer.cpp  VLayer.h  geosquare.cpp  geosquare.h
